Made style changes to try and fix issue of background images not fixing on mobile devices

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html{
-	height: 100%;
+	
 }
 
 .cal{
@@ -26,7 +26,7 @@ html{
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-repeat: no-repeat;
-	background-position: 50% 50%;
+	background-position: center;
 	background-attachment: fixed;
 }
 
